[tool.poetry]
name = "alonememo"
version = "0.1.0"
description = ""
authors = ["sohyun <sohyun1413@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^3.11.4"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
